--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!doctype html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=devise-width , inital-scale=1.0">
+    <title>primeiro site</title>
+  </head>
+  <body>
+    <h1>titulo de texto</h1>
+    <p>tem umtexto bem aqui!!</p>
+  </body>
+</html>
 
