--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=devise-width , inital-scale=1.0">
-    <title>primeiro site</title>
+    <title>kaue</title>
+    <link rel="shortcut icon" href="favicon.icon" type="image/x.icon">
   </head>
   <body>
-    <h1>titulo de texto</h1>
-    <p>tem um texto bem aqui!!</p>
+    <h1> quem sou eu</h1>
+    <p>ola meu nome e kaue, sou de sao paulo e estou no parana no momento estudando no inez </p>
+    <h2>O que eu gosto de fazer</h2>
+    <p> eu gosto de praticar esportes,trablhar, jogar jogos eletronicos,sair e conversa</p>
+    <h3>lugares que eu gosto de frequentar</h3>
+    <p>gosto de ir para o shopping, parentes, meu quarto</p>
+    <img> src = "goat.png" alt="grafico crescente">
+     <img> src = "inez.png" alt="grafico crescente">
+     <img> src = "futsin.jpeg" alt="grafico crescente">
   </body>
 </html>
 
