--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p> eu gosto de praticar esportes,trablhar, jogar jogos eletronicos,sair e conversa</p>
     <h3>lugares que eu gosto de frequentar</h3>
     <p>gosto de ir para o shopping, parentes, meu quarto</p>
-    <img src = "cristiano rnld.png" alt="grafico crescente">
-     <img src = "inez.png" alt="grafico crescente">
-     <img src = "bluo.png" alt="grafico crescente">
+    <img src="bluo.png" alt="descrição da imagem">
+    <img src="inez.png" alt="descrição da imagem">
+    <img src="cristianornld.png" alt="descrição da imagem">
   </body>
 </html>
 
