--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=devise-width , inital-scale=1.0">
+    <meta name="viewport"content="width=devise-width , inital-scale=1.0">
     <title>kaue</title>
     <link rel="shortcut icon" href="favicon.icon" type="image/x.icon">
   </head>
@@ -12,10 +12,10 @@
     <h2>O que eu gosto de fazer</h2>
     <p> eu gosto de praticar esportes,trablhar, jogar jogos eletronicos,sair e conversa</p>
     <h3>lugares que eu gosto de frequentar</h3>
-    <p>gosto de ir para o shopping, parentes, meu quarto</p>
-    <img src="bluo.png" alt="descrição da imagem">
-    <img src="inez.png" alt="descrição da imagem">
-    <img src="cristianornld.png" alt="descrição da imagem">
+    <p>gosto de ir para o shopping, parentes,meu quarto</p>
+    <img src = "bluo.png" alt = "futbol">
+    <img src = "inez.png" alt = "escola">
+    <img src = "cristianornld.png" alt = "cristiano">
   </body>
 </html>
 
