--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"content="width=devise-width , inital-scale=1.0">
     <title>kaue</title>
-    <link rel="shortcut icon" href="favicon.icon" type="image/x.icon">
+    <link rel="shortcut icon" href="pesquisa.png" type="image/x.icon">
   </head>
   <body>
     <h1> quem sou eu</h1>
