--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport"content="width=devise-width , inital-scale=1.0">
-    <title>kaue</title>
-    <link rel="shortcut icon" href="pesquisa.png" type="image/x.icon">
-  </head>
-  <body>
-    <h1> quem sou eu</h1>
-    <p>ola meu nome e kaue, sou de sao paulo e estou no parana no momento estudando no inez </p>
-    <h2>O que eu gosto de fazer</h2>
-    <p> eu gosto de praticar esportes,trablhar, jogar jogos eletronicos,sair e conversa</p>
-    <h3>lugares que eu gosto de frequentar</h3>
-    <p>gosto de ir para o shopping, parentes,meu quarto</p>
-    <img src = "bluo.png" alt = "futbol">
-    <img src = "inez.png" alt = "escola">
-    <img src = "cristianornld.png" alt = "cristiano">
-  </body>
+<doctype html>
+<html lang + "pt-br">
+<head>
+<Meta charset = "UTF-8">
+<title> kaue vasconcelos da silva</title>
+</head>
+<body>
+<ol type = "1" start ="1">
+<li>campos de futebol</h1>
+</ol>
+<ul>
+<li><a href= "https://maps.app.goo.gl/ceX7RhdprG4cdQF28>olha esse campo!! vamos visitar e veja o local</a></p>
+<li>este  link e para o campo do atletico
+</ul>
+</body>
 </html>
+
+
 
