--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <doctype html>
-<html lang + "pt-br">
+<html lang = "pt-br">
 <head>
 <Meta charset = "UTF-8">
-<title> kaue vasconcelos da silva</title>
+<title> kaue alan</title>
 </head>
 <body>
-<ol type = "1" start ="1">
-<li>campos de futebol</h1>
-</ol>
-<ul>
-<li><a href= "https://maps.app.goo.gl/ceX7RhdprG4cdQF28>olha esse campo!! vamos visitar e veja o local</a></p>
-<li>este  link e para o campo do atletico
-</ul>
+<a href="pag2.html" rel="next" target="_self">Para a proxima pagina</a>
+  <h1>Bem vindo a minha primeira pagina</h1>
+  <p>Essa pagina so e um teste clique no link acima!!</p>
+  <p>pode ver videos e fotos escolhdas por especialistas na área do YouTube </p>
 </body>
 </html>
+  
+  
+
+
 
 
 
