--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "pt-br">
 <head>
 <Meta charset = "UTF-8">
-<title> kaue alan</title>
+<title> kaue </title>
 </head>
 <body>
 <a href="pag2.html" rel="next" target="_self">Para a proxima pagina</a>
