--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang = "pt-br">
 <head>
 <Meta charset = "UTF-8">
-<title> kaue </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> kaue links </title>
 </head>
 <body>
 <a href="pag2.html" rel="next" target="_self">Para a proxima pagina</a>
