--- a/pag2.html
+++ b/pag2.html
@@ -10,7 +10,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iCk2iebosRc?si=TaqBVNt0KFFUEWoZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <img src="ouro.png" alt="baixar">
   <h1>visite meu site</h1>
-  </body>]
+  </body>
 </html>
   
   
