--- a/pag2.html
+++ b/pag2.html
@@ -9,7 +9,8 @@
   <a href="index.html" rel="prev" target="_self">pagina 1</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iCk2iebosRc?si=TaqBVNt0KFFUEWoZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <img src="ouro.png" alt="baixar">
-  <h1>visite meu site</h1>
+    <a href="index.html" rel="prev" target="_self">pagina 1</a>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/54oALR12ix4?si=2NLJ8Ysj1qWSjVrI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
   
