--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 <a href="pag2.html" rel="next" target="_self">Para a proxima pagina</a>
-  <h1>Bem vindo a minha primeira pagina, 
-    
-    
-    meu nome e kaue vasconcelos da silva</h1>
+  <h1>Bem vindo a minha primeira pagina,meu nome e kaue vasconcelos da silva</h1>
   <p>Essa pagina so e um teste clique no link acima!!</p>
   <p>pode ver videos e fotos escolhdas por especialistas na área do YouTube </p>
   <img src="ouro.jpeg" alt="baixar">
