--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Bem vindo a minha primeira pagina,meu nome e kaue vasconcelos da silva</h1>
   <p>Essa pagina so e um teste clique no link acima!!</p>
   <p>pode ver videos e fotos escolhdas por especialistas na área do YouTube </p>
-  <img src="ouro.jpeg" alt="baixar">
+  <img src="ourovv.png" alt="baixar">
 </body>
 </html>
   
