--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <title> kaue links </title>
 </head>
 <body>
+  <img src="ourovv.png" alt=".">
 <a href="pag2.html" rel="next" target="_self">Para a proxima pagina</a>
   <h1>Bem vindo a minha primeira pagina,meu nome e kaue vasconcelos da silva</h1>
   <p>Essa pagina so e um teste clique no link acima!!</p>
   <p>pode ver videos e fotos escolhdas por especialistas na área do YouTube </p>
-  <a href="ourovv.png" download="ourovv.png" type="aplicatiom/img>
-  <img src="ourovv.png" alt="baixar">
+  <a href="ourovv.png" download="ourovv.png" type="aplication/img>download</a>
 </body>
 </html>
   
