--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Bem vindo a minha primeira pagina,meu nome e kaue vasconcelos da silva</h1>
   <p>Essa pagina so e um teste clique no link acima!!</p>
   <p>pode ver videos e fotos escolhdas por especialistas na área do YouTube </p>
-  <a href="ourovv.png" download="ourovv.png" type="aplication/img>download</a>
+  <a href="ourovv.png" download="ourovv.png" type="imagem/png"> imagem 00</a>
 </body>
 </html>
   
